# rookiesophomore

./: README.md  mkdocs.yml  pyproject.toml  rookie_sophomore_ranks.py  rookie_sophomore_sim.py
docs/: api.md  examples.md  faq.md  index.md
rookiesophomore/: __init__.py  cli.py  ranking.py  simulation.py
